[package]
name = "sign_cms_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.6.4"
anyhow = "1.0.68"
md-5 = "0.10.5"
cms = "0.2.1"

[profile.release]
lto = true
opt-level = 'z'
strip = true
codegen-units = 1
#panic = 'abort'

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "my_benchmark"
harness = false
[lib]
bench = false
