[package]
name = "sign_jni_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.21.1"
anyhow = "1.0.68"
android_logger_lite = "0.1.0"
sign_cms_lib = { path = "../sign_cms_lib" }
once_cell = "1.16.0"


[profile.release]
lto = true
opt-level = 'z'
strip = true
codegen-units = 1
panic = 'abort'

[lib]
#C规范动态库
name = "cms"
crate_type = ["cdylib"]
